--- a/src/components/Contacts/Contact.module.css
+++ b/src/components/Contacts/Contact.module.css
@@ -17,7 +17,7 @@
 .contact__text {
   display: flex;
   flex-direction: column;
-  align-items: start;
+  align-items: flex-start;
   gap: 5px;
   margin-right: auto;
 }
